# sysrat-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST_PLAN.md  config-manager.toml  fix_nerdfonts.py  justfile  lines.sh  lint.sh  rebuild.py  rebuild.sh  start.py  start.sh  status.py  status.sh  stop.py  stop.sh  sysrat.toml
core/: Cargo.toml
core/src/: lib.rs  types.rs
core/src/config/: app_config.rs  mod.rs  models.rs  scanner.rs
core/src/configs/: actions.rs  mod.rs  validation.rs
core/src/containers/: actions.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  theme.toml
frontend/build_helpers/: statusline.rs  theme.rs  version.rs
frontend/build_helpers/theme/: generator.rs  mod.rs  scanner.rs
frontend/src/: dom.rs  init.rs  lib.rs
frontend/src/api/: types.rs
frontend/src/events/: container_list.rs  file_list.rs  menu.rs  mod.rs
frontend/src/keybinds/: help_text.rs
frontend/src/state/: app.rs  editor.rs  mod.rs  pane.rs  refresh.rs  splash.rs
frontend/src/state/refresh/: container_list.rs  file_list.rs
frontend/src/storage/: local.rs  mod.rs
frontend/src/theme/: builder.rs  container_list.rs  editor.rs  file_list.rs  loader.rs  menu.rs  mod.rs  status_line.rs  types.rs
frontend/src/theme/types/: colors.rs  config.rs  font.rs  icons.rs  mod.rs
frontend/src/ui/: container_list.rs  editor.rs  file_list.rs  menu.rs  mod.rs  splash.rs
frontend/src/utils/: error.rs
frontend/themes/: cyberpunk.toml  dracula.toml  frappe.toml  gruvbox-dark.toml  gruvbox-light.toml  latte.toml  macchiato.toml  mocha.toml  synthwave.toml
(+80 files in other folders)
