[package]
name = "sysrat-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
tokio = { version = "1", features = ["process", "fs", "io-util", "sync"] }
dotenvy = "0.15"
k-lib = { git = "https://github.com/ryugen-io/kitchN.git", branch = "master" }
