[package]
name = "sysrat-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
ratzilla = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
tui-textarea = { version = "0.7", default-features = false, features = ["ratatui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
gloo-timers = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
toml = "0.8"
tachyonfx = { version = "0.20.1", default-features = false, features = ["wasm"] }
js-sys = "0.3.83"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
toml = "0.8"
dotenvy = "0.15"
